# fastauth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fastauth/: main.py  requirements.txt  sample.env  vercel.json
fastauth/templates/: edit.html  index.html
