[tool.poetry]
name = "fastauth"
version = "0.1.0"
description = "Simple Social OAuth2 login with FastAPI"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0"
Authlib = "^1"
itsdangerous = "^2"
httpx = "^0"
Jinja2 = "^3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
