[project]
name = "fastauth"
version = "0.1.0"
description = "Simple Social OAuth2 login with FastAPI"
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0,<1",
    "Authlib>=1,<2",
    "itsdangerous>=2,<3",
    "httpx>=0,<1",
    "Jinja2>=3,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["fastauth"]

[dependency-groups]
dev = [
    "uvicorn>=0.20.0,<0.21",
    "pytest>=7.2.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
